✨ feat: Creates and applies HeaderComponent

--- a/src/app/views/pages/home-page/home-page.component.html
+++ b/src/app/views/pages/home-page/home-page.component.html
@@ -1,8 +1,9 @@
 
 <div class="page">
+	<app-header/>
 	<main>
 		<h1 class="title">
-			Gerador de Senhas
+			Crie sua Senha
 			<hr class="divider"/>
 		</h1>
 		<form class="inputs" action="">
@@ -38,7 +39,7 @@
 				</select>
 			</div>
 
-			<input class="button" type="submit"/>
+			<input class="button" type="submit" value="Gerar"/>
 		</form>
 	</main>
 
