--- a/src/app/views/pages/home-page/home-page.component.scss
+++ b/src/app/views/pages/home-page/home-page.component.scss
@@ -12,6 +12,11 @@
 	max-height: 100vh;
 	background-color: var(--back-dark);
 
+	app-header
+	{
+		width: 100%;
+	}
+
 	main
 	{
 		display: flex;
@@ -24,8 +29,6 @@
 
 		.title
 		{
-			margin-bottom: 20px;
-
 			color: var(--title);
 			font-family: "Philosopher";
 			font-size: 3em;
