--- a/src/app/views/pages/home-page/home-page.component.html
+++ b/src/app/views/pages/home-page/home-page.component.html
@@ -2,47 +2,52 @@
 <div class="page">
 	<app-header/>
 	<main>
-		<h1 class="title">
-			Crie sua Senha
-			<hr class="divider"/>
-		</h1>
-		<form class="inputs" action="">
-			<div class="field">
-				<label for="keyPassword" class="title-field">Palavra-Chave</label>
-				<input
-					id="keyPassword"
-					class="input-field"
-					type="text"
-					placeholder="Palavra-Chave opcional..."
-					[(ngModel)]="wordUser" [ngModelOptions]="{standalone: true}"
-				/>
-			</div>
+		<div #containerInputs class="container show">
+			<h1 class="title">
+				Crie sua Senha
+				<hr class="divider"/>
+			</h1>
+			<form class="inputs" action="">
+				<div class="field">
+					<label for="keyPassword" class="title-field">Palavra-Chave</label>
+					<input
+						id="keyPassword"
+						class="input-field"
+						type="text"
+						placeholder="Palavra-Chave opcional..."
+						[(ngModel)]="wordUser" [ngModelOptions]="{standalone: true}"
+					/>
+				</div>
 
-			<div class="field">
-				<label for="lenght" class="title-field">Quantidade de Caracteres</label>
-				<input
-					id="lenght"
-					class="input-field"
-					type="number"
-					required
-					placeholder="Tamanho da senha..."
-					[(ngModel)]="length" [ngModelOptions]="{standalone: true}"
-				/>
-			</div>
+				<div class="field">
+					<label for="lenght" class="title-field">Quantidade de Caracteres</label>
+					<input
+						id="lenght"
+						class="input-field"
+						type="number"
+						required
+						placeholder="Tamanho da senha..."
+						[(ngModel)]="length" [ngModelOptions]="{standalone: true}"
+					/>
+				</div>
 
-			<div class="field">
-				<label for="sucurityLevel" class="title-field">Nível de Segurança</label>
-				<select id="sucurityLevel" name="sucurityLevel" class="input-field" required [(ngModel)]="securityLevel" [ngModelOptions]="{standalone: true}">
-					<option class="option" value="-1" selected disabled>--Escolha um Nível</option>
-					<option class="option" value="1">0-9</option>
-					<option class="option" value="2">0-9 | a-z</option>
-					<option class="option" value="3">0-9 | a-z | A-Z</option>
-					<option class="option" value="4">0-9 | a-z | A-Z | $-&</option>
-				</select>
-			</div>
+				<div class="field">
+					<label for="sucurityLevel" class="title-field">Nível de Segurança</label>
+					<select id="sucurityLevel" name="sucurityLevel" class="input-field" required [(ngModel)]="securityLevel" [ngModelOptions]="{standalone: true}">
+						<option class="option" value="-1" selected disabled>--Escolha um Nível</option>
+						<option class="option" value="1">0-9</option>
+						<option class="option" value="2">0-9 | a-z</option>
+						<option class="option" value="3">0-9 | a-z | A-Z</option>
+						<option class="option" value="4">0-9 | a-z | A-Z | $-&</option>
+					</select>
+				</div>
 
-			<input class="button" type="submit" value="Gerar" (click)="generatePassword()"/>
-		</form>
+				<input class="button" type="submit" value="Gerar" (click)="generatePassword()"/>
+			</form>
+		</div>
+		<div #containerResult class="container">
+			<app-result [password]="passwordResult"/>
+		</div>
 	</main>
 
 	<app-footer/>
