🔁 update(Result Component): Add buttons
- A button to return to password generation.
- A button to copy the password.

--- a/src/app/views/components/result/result.component.html
+++ b/src/app/views/components/result/result.component.html
@@ -1,2 +1,8 @@
 
-<p>{{ password }}</p>
+<div class="container-result">
+	<p>{{ password }}</p>
+	<div class="buttons">
+		<input class="button" type="button" value="Voltar" (click)="callAction()"/>
+		<input class="button" type="button" value="Copiar" (click)="copyPassword()"/>
+	</div>
+</div>
