--- a/src/app/views/pages/home-page/home-page.component.html
+++ b/src/app/views/pages/home-page/home-page.component.html
@@ -6,7 +6,7 @@
 			<app-inputs (action)="actionVisibilitElements($event)"/>
 		</div>
 		<div #containerResult class="container">
-			<app-result [password]="passwordResult"/>
+			<app-result [password]="passwordResult" (action)="actionVisibilitElements($event)"/>
 		</div>
 	</main>
 
