--- a/src/app/views/pages/home-page/home-page.component.scss
+++ b/src/app/views/pages/home-page/home-page.component.scss
@@ -38,14 +38,14 @@
 
 		@keyframes show
 		{
-			0% { transform: scaleY(0); }
-			100% { transform: scaleY(1); }
+			0% { transform: scaleX(0) scaleY(0) rotate(90deg); }
+			100% { transform: scaleX(1) scaleY(1); }
 		}
 
 		@keyframes hidden
 		{
-			0% { transform: scaleY(1); }
-			100% { transform: scaleY(0); }
+			0% { transform: scaleX(1) scaleY(1); }
+			100% { transform:  scaleX(0) scaleY(0); }
 		}
 	}
 
