--- a/src/app/views/components/result/result.component.html
+++ b/src/app/views/components/result/result.component.html
@@ -1,6 +1,6 @@
 
 <div class="container-result">
-	<p>{{ password }}</p>
+	<p class="result">{{ password }}</p>
 	<div class="buttons">
 		<input class="button" type="button" value="Voltar" (click)="callAction()"/>
 		<input class="button" type="button" value="Copiar" (click)="copyPassword()"/>
