--- a/src/app/views/components/result/result.component.scss
+++ b/src/app/views/components/result/result.component.scss
@@ -10,6 +10,17 @@
 	width: 100%;
 	height: 100%;
 
+	.result
+	{
+		max-width: 80%;
+
+		line-height: 1.2em;
+		word-wrap: break-word;
+		word-break: break-all;
+		text-overflow: clip;
+		text-wrap: wrap;
+	}
+
 	.buttons
 	{
 		display: flex;
@@ -18,7 +29,7 @@
 		align-items: center;
 		gap: 30px;
 
-		width: 50%;
+		width: 100%;
 
 		.button
 		{
@@ -45,6 +56,20 @@
 				border: 2px solid var(--back-light);
 
 				color: var(--title);
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 1000px)
+{
+	.container-result
+	{
+		.buttons
+		{
+			.button
+			{
+				width: 35%;
 			}
 		}
 	}
