--- a/src/app/views/pages/home-page/home-page.component.scss
+++ b/src/app/views/pages/home-page/home-page.component.scss
@@ -7,11 +7,9 @@
 	justify-content: space-between;
 	padding: 0px;
 	box-sizing: border-box;
-	overflow: hidden;
 
 	width: 100%;
-	height: 100vh;
-	max-height: 100vh;
+	min-height: 100vh;
 	background-color: var(--back-dark);
 
 	app-header
@@ -53,15 +51,16 @@
 
 	main, .container
 	{
+		box-sizing: border-box;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		gap: 20px;
+		padding: 20px 0px;
 
 		width: 100%;
 		max-width: 100%;
-		max-height: 100%;
 	}
 
 	app-footer, app-header, app-inputs, app-result
