--- a/src/app/views/components/result/result.component.html
+++ b/src/app/views/components/result/result.component.html
@@ -5,4 +5,6 @@
 		<input class="button" type="button" value="Voltar" (click)="callAction()"/>
 		<input class="button" type="button" value="Copiar" (click)="copyPassword()"/>
 	</div>
+	<app-alert [content]="'Senha Copiada!'" [onAlert]="activeAlert"/>
 </div>
+
