🔁 update(HeaderComponent): Adds link to GitHub repository

--- a/src/app/views/components/header/header.component.html
+++ b/src/app/views/components/header/header.component.html
@@ -3,6 +3,8 @@
 	<h2 class="title">FW Password Generator</h2>
 	<div class="tools">
 		<a><img class="image" src="./assets/info.svg"/></a>
-		<a><img class="image" src="./assets/github.svg"/></a>
+		<a href="https://github.com/WesleyTelesBenette/fw-password-generator" target="_blank">
+			<img class="image" src="./assets/github.svg"/>
+		</a>
 	</div>
 </header>
