--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,9 @@
 	font-size: 1em;
 	font-family: "Source Code Pro";
 }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
