✨ feat: Adds a Modal variation for help
- Creates the HelpModal component
- Creates an extra SCSS file for Modal variations
- Slightly modifies aspects of the ModalComponent and HeaderComponent

--- a/src/app/views/components/header/header.component.html
+++ b/src/app/views/components/header/header.component.html
@@ -2,13 +2,11 @@
 <header>
 	<h2 class="title">FW Password Generator</h2>
 	<div class="tools">
-		<a data-bs-toggle="modal" data-bs-target="#modalInfo"><img class="image" src="./assets/info.svg"/></a>
+		<a data-bs-toggle="modal" data-bs-target="#helpModal"><img class="image" src="./assets/info.svg"/></a>
 		<a href="https://github.com/WesleyTelesBenette/fw-password-generator" target="_blank">
 			<img class="image" src="./assets/github.svg"/>
 		</a>
 	</div>
 </header>
 
-<app-modal [modalId]="'modalInfo'" [title]="'Ajuda'">
-	Conteúdo...
-</app-modal>
+<app-help-modal/>
