--- a/src/app/views/components/modal/modal.component.html
+++ b/src/app/views/components/modal/modal.component.html
@@ -1,6 +1,6 @@
 
 <div class="modal fade" [id]="modalId" tabindex="-1" aria-labelledby="modalComponentLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-scrollable">
     <div class="modal-content modal-container">
       <div class="modal-header modal-container-border">
         <h1 class="modal-title fs-5 modal-container-title" id="modalComponentLabel">{{ title }}</h1>
