--- a/src/app/views/components/alert/alert.component.html
+++ b/src/app/views/components/alert/alert.component.html
@@ -1,4 +1,4 @@
 
-<div class="container-alert" [ngClass]="(onAlert !== undefined) ? onAlert ? 'show' : 'hidden' : ''">
+<div class="container-alert" [ngClass]="(onAlert !== undefined) ? (onAlert ? 'show' : 'hidden') : 'undefined'">
 	<p class="alert">{{ content }}</p>
 </div>
